--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ Flask>=1.1.1
 werkzeug>=0.16.1
 pytest>=4.6.11
 coverage>=5.5
-coveralls>=1.11.1
-urllib
+coveralls>=1.11.
 pytesseract
 lxml
 logging
